--- a/package.json
+++ b/package.json
@@ -16,16 +16,25 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@mdx-js/mdx": "^1.6.22",
+    "@mdx-js/react": "^1.6.22",
+    "axios": "^0.21.1",
     "babel-plugin-styled-components": "^1.13.2",
+    "chalk": "^4.1.1",
     "eslint": "^7.31.0",
     "gatsby": "^3.9.0",
     "gatsby-plugin-emotion": "^6.9.0",
     "gatsby-plugin-gatsby-cloud": "^2.9.0",
+    "gatsby-plugin-mdx": "^2.10.0",
+    "gatsby-plugin-react-helmet": "^4.10.0",
     "gatsby-plugin-styled-components": "^4.9.0",
+    "gatsby-source-filesystem": "^3.10.0",
+    "gatsby-transformer-remark": "^4.7.0",
     "lodash": "^4.17.21",
     "prettier": "^2.3.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0",
     "styled-components": "^5.3.0"
   }
 }
