--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint": "^7.31.0",
     "gatsby": "^3.9.0",
     "gatsby-plugin-emotion": "^6.9.0",
+    "gatsby-plugin-feed": "^3.10.0",
     "gatsby-plugin-gatsby-cloud": "^2.9.0",
     "gatsby-plugin-mdx": "^2.10.0",
     "gatsby-plugin-react-helmet": "^4.10.0",
