--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "gatsby-plugin-mdx": "^2.10.0",
     "gatsby-plugin-offline": "^4.10.0",
     "gatsby-plugin-react-helmet": "^4.10.0",
+    "gatsby-plugin-sitemap": "^4.6.0",
     "gatsby-plugin-styled-components": "^4.9.0",
     "gatsby-source-filesystem": "^3.10.0",
     "gatsby-transformer-remark": "^4.7.0",
