update prettier format

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,11 @@
 {
-  "semi": false,
-  "singleQuote": true,
+  "bracketSpacing": true,
+  "jsxBracketSameLine": false,
+  "jsxSingleQuote": false,
   "printWidth": 80,
-  "arrowParens": "always",
-  "tabWidth": 2
+  "proseWrap": "always",
+  "semi": false,
+  "singleQuote": false,
+  "tabWidth": 2,
+  "trailingComma": "all"
 }
