--- a/package.json
+++ b/package.json
@@ -23,15 +23,18 @@
     "chalk": "^4.1.1",
     "eslint": "^7.31.0",
     "gatsby": "^3.9.0",
-    "gatsby-plugin-emotion": "^6.9.0",
+    "gatsby-plugin-emotion": "^6.11.0",
     "gatsby-plugin-feed": "^3.10.0",
     "gatsby-plugin-gatsby-cloud": "^2.9.0",
     "gatsby-plugin-manifest": "^3.10.0",
-    "gatsby-plugin-mdx": "^2.10.0",
+    "gatsby-plugin-mdx": "^2.11.0",
     "gatsby-plugin-offline": "^4.10.0",
+    "gatsby-plugin-page-creator": "^3.11.0",
     "gatsby-plugin-react-helmet": "^4.10.0",
+    "gatsby-plugin-sharp": "^3.11.0",
     "gatsby-plugin-sitemap": "^4.6.0",
     "gatsby-plugin-styled-components": "^4.9.0",
+    "gatsby-remark-images": "^5.8.0",
     "gatsby-source-filesystem": "^3.10.0",
     "gatsby-transformer-remark": "^4.7.0",
     "lodash": "^4.17.21",
@@ -39,6 +42,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
+    "react-icons": "^4.2.0",
     "styled-components": "^5.3.0"
   }
 }
