--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@chakra-ui/gatsby-plugin": "^2.0.1",
+    "@chakra-ui/react": "^1.6.6",
+    "@emotion/react": "^11.4.1",
+    "@emotion/styled": "^11.3.0",
     "@fontsource/open-sans": "^4.5.0",
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
@@ -23,6 +27,7 @@
     "babel-plugin-styled-components": "^1.13.2",
     "chalk": "^4.1.1",
     "eslint": "^7.31.0",
+    "framer-motion": "^4.1.17",
     "gatsby": "^3.9.0",
     "gatsby-plugin-emotion": "^6.11.0",
     "gatsby-plugin-feed": "^3.10.0",
