--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@chakra-ui/react": "^1.6.6",
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
+    "@fontsource/fira-code": "^4.5.0",
     "@fontsource/open-sans": "^4.5.0",
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
@@ -40,11 +41,14 @@
     "gatsby-plugin-sharp": "^3.11.0",
     "gatsby-plugin-sitemap": "^4.6.0",
     "gatsby-plugin-styled-components": "^4.9.0",
+    "gatsby-remark-code-titles": "^1.1.0",
     "gatsby-remark-images": "^5.8.0",
+    "gatsby-remark-prismjs": "^5.8.0",
     "gatsby-source-filesystem": "^3.10.0",
-    "gatsby-transformer-remark": "^4.7.0",
+    "gatsby-transformer-remark": "^4.8.0",
     "lodash": "^4.17.21",
     "prettier": "^2.3.2",
+    "prismjs": "^1.24.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
