--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "gatsby-plugin-sitemap": "^4.6.0",
     "gatsby-plugin-styled-components": "^4.9.0",
     "gatsby-remark-code-titles": "^1.1.0",
+    "gatsby-remark-external-links": "0.0.4",
     "gatsby-remark-images": "^5.8.0",
     "gatsby-remark-prismjs": "^5.8.0",
     "gatsby-source-filesystem": "^3.10.0",
