--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "gatsby-plugin-emotion": "^6.11.0",
     "gatsby-plugin-feed": "^3.10.0",
     "gatsby-plugin-gatsby-cloud": "^2.9.0",
+    "gatsby-plugin-image": "^1.11.0",
     "gatsby-plugin-manifest": "^3.10.0",
     "gatsby-plugin-mdx": "^2.11.0",
     "gatsby-plugin-offline": "^4.10.0",
@@ -45,8 +46,9 @@
     "gatsby-remark-external-links": "0.0.4",
     "gatsby-remark-images": "^5.8.0",
     "gatsby-remark-prismjs": "^5.8.0",
-    "gatsby-source-filesystem": "^3.10.0",
+    "gatsby-source-filesystem": "^3.11.0",
     "gatsby-transformer-remark": "^4.8.0",
+    "gatsby-transformer-sharp": "^3.11.0",
     "lodash": "^4.17.21",
     "prettier": "^2.3.2",
     "prismjs": "^1.24.1",
