--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "gatsby"
   ],
   "scripts": {
-    "develop": "gatsby develop",
+    "dev": "gatsby develop",
     "start": "gatsby develop",
     "build": "gatsby build",
     "serve": "gatsby serve",
@@ -16,48 +16,46 @@
     "format": "prettier --write ."
   },
   "dependencies": {
-    "@chakra-ui/gatsby-plugin": "^2.0.1",
-    "@chakra-ui/react": "^1.6.6",
-    "@emotion/react": "^11.4.1",
-    "@emotion/styled": "^11.3.0",
     "@fontsource/fira-code": "^4.5.0",
     "@fontsource/open-sans": "^4.5.0",
-    "@mdx-js/mdx": "^1.6.22",
-    "@mdx-js/react": "^1.6.22",
+    "@mdx-js/mdx": "^2.1.5",
+    "@mdx-js/react": "^2.1.5",
     "axios": "^0.23.0",
     "babel-plugin-styled-components": "^1.13.2",
     "chalk": "^4.1.1",
-    "eslint": "^8.1.0",
+    "eslint": "^8.0.0",
     "framer-motion": "^4.1.17",
-    "gatsby": "^4.0.0",
-    "gatsby-plugin-emotion": "^7.0.0",
-    "gatsby-plugin-feed": "^4.0.0",
-    "gatsby-plugin-gatsby-cloud": "^4.0.0",
-    "gatsby-plugin-google-tagmanager": "^4.0.0",
-    "gatsby-plugin-image": "^2.0.0",
-    "gatsby-plugin-manifest": "^4.0.0",
-    "gatsby-plugin-mdx": "^3.0.0",
-    "gatsby-plugin-offline": "^5.0.0",
-    "gatsby-plugin-page-creator": "^4.0.0",
-    "gatsby-plugin-react-helmet": "^5.0.0",
-    "gatsby-plugin-sharp": "^4.0.0",
-    "gatsby-plugin-sitemap": "^5.0.0",
-    "gatsby-plugin-styled-components": "^5.0.0",
+    "gatsby": "^5.0.0",
+    "gatsby-plugin-feed": "^5.0.0",
+    "gatsby-plugin-gatsby-cloud": "^5.0.0",
+    "gatsby-plugin-google-tagmanager": "^5.0.0",
+    "gatsby-plugin-image": "^3.0.0",
+    "gatsby-plugin-manifest": "^5.0.0",
+    "gatsby-plugin-mdx": "^5.2.0",
+    "gatsby-plugin-offline": "^6.0.0",
+    "gatsby-plugin-page-creator": "^5.0.0",
+    "gatsby-plugin-react-helmet": "^6.0.0",
+    "gatsby-plugin-sharp": "^5.0.0",
+    "gatsby-plugin-sitemap": "^6.0.0",
+    "gatsby-plugin-styled-components": "^6.0.0",
     "gatsby-remark-code-buttons": "^2.0.7",
     "gatsby-remark-code-titles": "^1.1.0",
     "gatsby-remark-external-links": "0.0.4",
-    "gatsby-remark-images": "^6.0.0",
-    "gatsby-remark-prismjs": "^6.0.0",
-    "gatsby-source-filesystem": "^4.0.0",
-    "gatsby-transformer-remark": "^5.0.0",
-    "gatsby-transformer-sharp": "^4.0.0",
+    "gatsby-remark-images": "^7.0.0",
+    "gatsby-remark-prismjs": "^7.0.0",
+    "gatsby-source-filesystem": "^5.0.0",
+    "gatsby-transformer-remark": "^6.0.0",
+    "gatsby-transformer-sharp": "^5.0.0",
     "lodash": "^4.17.21",
-    "prettier": "^2.3.2",
-    "prismjs": "^1.24.1",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "prettier": "^2.8.0",
+    "prismjs": "^1.29.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "react-helmet": "^6.1.0",
-    "react-icons": "^4.2.0",
-    "styled-components": "^5.3.0"
+    "react-icons": "^4.7.1",
+    "styled-components": "^5.3.6"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
