--- a/package.json
+++ b/package.json
@@ -42,10 +42,12 @@
     "gatsby-remark-code-titles": "^1.1.0",
     "gatsby-remark-external-links": "0.0.4",
     "gatsby-remark-images": "^7.0.0",
+    "gatsby-remark-katex": "^7.7.0",
     "gatsby-remark-prismjs": "^7.0.0",
     "gatsby-source-filesystem": "^5.0.0",
-    "gatsby-transformer-remark": "^6.0.0",
+    "gatsby-transformer-remark": "^6.7.0",
     "gatsby-transformer-sharp": "^5.0.0",
+    "katex": "^0.16.4",
     "lodash": "^4.17.21",
     "prettier": "^2.8.0",
     "prismjs": "^1.29.0",
