[github-actions] Update package manager to yarn

--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -36,9 +36,9 @@ jobs:
             ${{ runner.os }}-
 
       - name: Install Dependencies
-        run: npm install
+        run: yarn install
 
       - name: Build
-        run: npm run build
+        run: yarn build
 
       # @todo: Add tests/reports and create PR
